Updated properties file to reflect new name.

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=digitalPin
+name=avrDigitalPin
 version=1.0.0
 author=Norman Dunbar <normandunbar@example.com
 maintainer=Norman Dunbar <normandunbar@example.com
-sentence=Implements input and output "digitalPin" objects.
+sentence=Implements input and output "avrDigitalPin" objects.
 paragraph=A much nicer manner of using pins on an Arduino board.
 category=Signal Input/Output
-url=https://github.com/NormanDunbar/digitalPin
+url=https://github.com/NormanDunbar/avrDigitalPin
 architectures=avr
